--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p id="UserInfo">Information About User</p>
     <div class="summary">
         <p>I have always fantasized about <strong>technology</strong>, what it could do in years to come and the greater stake of humanity!<br> That have engineered my <strong>interests</strong> in any thing <em>science</em> especially how machines handle
-            taskes. It wouldn't be out of<br> place for me to say that have contributed to developing passion for <strong>sci-fi books</strong> and <strong>video games</strong>. Yea, This is where <br>my life is centered around.
+            tasks. It wouldn't be out of<br> place for me to say, that have contributed to the developing passion for <strong>sci-fi books</strong> and <strong>video games</strong>. Yea, This is where <br>my life is centered around.
         </p>
     </div>
     </div>
