--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Brandy</title>
+    <title>Usenmfon | Uko</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
